<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/parchment"
    tools:context=".ChooseTaskType">

    <Button
        android:id="@+id/button4"
        android:layout_width="174dp"
        android:layout_height="217dp"
        android:text="@string/not_urgent_but_important"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875"
        android:background="@drawable/book_outline"
        android:backgroundTint="@color/gray"
        />

    <Button
        android:id="@+id/button7"
        android:layout_width="174dp"
        android:layout_height="217dp"
        android:text="@string/urgent_and_important"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075"
        android:background="@drawable/book_outline"
        android:backgroundTint="@color/blue"
        />

    <Button
        android:id="@+id/button8"
        android:layout_width="174dp"
        android:layout_height="217dp"
        android:text="@string/not_urgent_and_not_important"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875"
        android:background="@drawable/book_outline"
        android:backgroundTint="@color/green"
        />

    <Button
        android:id="@+id/button6"
        android:layout_width="174dp"
        android:layout_height="217dp"
        android:text="@string/urgent_but_not_important"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073"
        android:background="@drawable/book_outline"
        android:backgroundTint="@color/yellow"
        />


    <Button
        android:id="@+id/button12"
        android:layout_width="285dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/red"
        android:text="@string/overdue_tasks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>